--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@ function MM_preloadImages() {
 -->
 </script>
 </head>
-<body style="background-color: #000000" onload="MM_preloadImages('images/index_r3_c3_f2.gif','images/index_r3_c5_f2.gif','images/index_r3_c7_f2.gif','images/index_r3_c9_f2.gif','images/index_r3_c11_f2.gif');">
+<body style="background-color: #000000" onload="MM_preloadImages('sanger/app/images/index_r3_c3_f2.gif','sanger/app/images/index_r3_c5_f2.gif','sanger/app/images/index_r3_c7_f2.gif','sanger/app/images/index_r3_c9_f2.gif','sanger/app/images/index_r3_c11_f2.gif');">
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -42,42 +42,42 @@ if (height >= 960) {
 </script>
 <table width="794" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
-   <td><img src="images/spacer.gif" width="20" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="31" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="56" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="61" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="59" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="62" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="55" height="1" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="1" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="20" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="31" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="56" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="61" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="59" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="62" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="90" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="55" height="1" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="1" height="1" border="0" alt="" /></td>
   </tr>
   <tr>
-   <td rowspan="3"><img name="index_r1_c1" src="images/index_r1_c1.gif" width="20" height="253" border="0" alt="" /></td>
-   <td colspan="11"><img name="index_r1_c2" src="images/index_r1_c2.gif" width="774" height="23" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="1" height="23" border="0" alt="" /></td>
+   <td rowspan="3"><img name="index_r1_c1" src="sanger/app/images/index_r1_c1.gif" width="20" height="253" border="0" alt="" /></td>
+   <td colspan="11"><img name="index_r1_c2" src="sanger/app/images/index_r1_c2.gif" width="774" height="23" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="1" height="23" border="0" alt="" /></td>
   </tr>
   <tr>
-   <td colspan="11"><img name="index_r2_c2" src="images/index_r2_c2.gif" width="774" height="107" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="1" height="107" border="0" alt="" /></td>
+   <td colspan="11"><img name="index_r2_c2" src="sanger/app/images/index_r2_c2.gif" width="774" height="107" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="1" height="107" border="0" alt="" /></td>
   </tr>
   <tr>
-   <td><img name="index_r3_c2" src="images/index_r3_c2.gif" width="31" height="123" border="0" alt="" /></td>
-   <td><a href="http://www.nyu.edu/projects/sanger/project/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c3','','images/index_r3_c3_f2.gif',1);"><img name="index_r3_c3" src="images/index_r3_c3.gif" width="90" height="123" border="0" alt="" /></a></td>
-   <td><img name="index_r3_c4" src="images/index_r3_c4.gif" width="56" height="123" border="0" alt="" /></td>
-   <td><a href="http://www.nyu.edu/projects/sanger/documents/electroniced.php" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c5','','images/index_r3_c5_f2.gif',1);"><img name="index_r3_c5" src="images/index_r3_c5.gif" width="90" height="123" border="0" alt="" /></a></td>
-   <td><img name="index_r3_c6" src="images/index_r3_c6.gif" width="61" height="123" border="0" alt="" /></td>
-   <td><a href="documents/search.php" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c7','','images/index_r3_c7_f2.gif',1);"><img name="index_r3_c7" src="images/index_r3_c7.gif" width="90" height="123" border="0" alt="" /></a></td>
-   <td><img name="index_r3_c8" src="images/index_r3_c8.gif" width="59" height="123" border="0" alt="" /></td>
-    <td><a href="http://www.nyu.edu/projects/sanger/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c9','','images/index_r3_c9_f2.gif',1);"><img name="index_r3_c9" src="images/index_r3_c9.gif" width="90" height="123" border="0" alt="" /></a></td>
-   <td><img name="index_r3_c10" src="images/index_r3_c10.gif" width="62" height="123" border="0" alt="" /></td>
-   <td><a href="http://www.nyu.edu/projects/sanger/contactus/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c11','','images/index_r3_c11_f2.gif',1);"><img name="index_r3_c11" src="images/index_r3_c11.gif" width="90" height="123" border="0" alt="" /></a></td>
-   <td><img name="index_r3_c12" src="images/index_r3_c12.gif" width="55" height="123" border="0" alt="" /></td>
-   <td><img src="images/spacer.gif" width="1" height="123" border="0" alt="" /></td>
+   <td><img name="index_r3_c2" src="sanger/app/images/index_r3_c2.gif" width="31" height="123" border="0" alt="" /></td>
+   <td><a href="http://www.nyu.edu/projects/sanger/project/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c3','','sanger/app/images/index_r3_c3_f2.gif',1);"><img name="index_r3_c3" src="sanger/app/images/index_r3_c3.gif" width="90" height="123" border="0" alt="" /></a></td>
+   <td><img name="index_r3_c4" src="sanger/app/images/index_r3_c4.gif" width="56" height="123" border="0" alt="" /></td>
+   <td><a href="http://www.nyu.edu/projects/sanger/documents/electroniced.php" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c5','','sanger/app/images/index_r3_c5_f2.gif',1);"><img name="index_r3_c5" src="sanger/app/images/index_r3_c5.gif" width="90" height="123" border="0" alt="" /></a></td>
+   <td><img name="index_r3_c6" src="sanger/app/images/index_r3_c6.gif" width="61" height="123" border="0" alt="" /></td>
+   <td><a href="sanger/app/documents/search.php" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c7','','sanger/app/images/index_r3_c7_f2.gif',1);"><img name="index_r3_c7" src="sanger/app/images/index_r3_c7.gif" width="90" height="123" border="0" alt="" /></a></td>
+   <td><img name="index_r3_c8" src="sanger/app/images/index_r3_c8.gif" width="59" height="123" border="0" alt="" /></td>
+    <td><a href="http://www.nyu.edu/projects/sanger/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c9','','sanger/app/images/index_r3_c9_f2.gif',1);"><img name="index_r3_c9" src="sanger/app/images/index_r3_c9.gif" width="90" height="123" border="0" alt="" /></a></td>
+   <td><img name="index_r3_c10" src="sanger/app/images/index_r3_c10.gif" width="62" height="123" border="0" alt="" /></td>
+   <td><a href="http://www.nyu.edu/projects/sanger/contactus/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c11','','sanger/app/images/index_r3_c11_f2.gif',1);"><img name="index_r3_c11" src="sanger/app/images/index_r3_c11.gif" width="90" height="123" border="0" alt="" /></a></td>
+   <td><img name="index_r3_c12" src="sanger/app/images/index_r3_c12.gif" width="55" height="123" border="0" alt="" /></td>
+   <td><img src="sanger/app/images/spacer.gif" width="1" height="123" border="0" alt="" /></td>
   </tr>
 </table>
 </body>
