Trying to add link to header and splash page for aboutmspp

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@ if (height >= 960) {
   </tr>
   <tr>
    <td><img name="index_r3_c2" src="sanger/app/images/index_r3_c2.gif" width="31" height="123" border="0" alt="" /></td>
-   <td><a href="http://www.nyu.edu/projects/sanger/project/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c3','','sanger/app/images/index_r3_c3_f2.gif',1);"><img name="index_r3_c3" src="sanger/app/images/index_r3_c3.gif" width="90" height="123" border="0" alt="" /></a></td>
+   <td><a href="http://www.sangerpapers.org/sanger/app/documents/aboutproject.php" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c3','','sanger/app/images/index_r3_c3_f2.gif',1);"><img name="index_r3_c3" src="sanger/app/images/index_r3_c3.gif" width="90" height="123" border="0" alt="" /></a></td>
    <td><img name="index_r3_c4" src="sanger/app/images/index_r3_c4.gif" width="56" height="123" border="0" alt="" /></td>
    <td><a href="http://www.nyu.edu/projects/sanger/documents/electroniced.php" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('index_r3_c5','','sanger/app/images/index_r3_c5_f2.gif',1);"><img name="index_r3_c5" src="sanger/app/images/index_r3_c5.gif" width="90" height="123" border="0" alt="" /></a></td>
    <td><img name="index_r3_c6" src="sanger/app/images/index_r3_c6.gif" width="61" height="123" border="0" alt="" /></td>
